--- a/style.css
+++ b/style.css
@@ -1,100 +1,136 @@
-*{
-    font-family: 'Courier New', Courier, monospace;
+body{
+    margin: 0px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.form{
+::-webkit-scrollbar{
+    width: 10px;
+    border-radius: 20px;
+}
+::-webkit-scrollbar-track{
+    background: black;
+    border-radius: 20px;
+}
+::-webkit-scrollbar-thumb{
+    background: none;
+    border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background: white;
+}
+.container{
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-}
-.form > .btn{
-    display: grid;
-    width: 100%;
-    grid-template-columns: 1fr;
-    align-items: start;
-    padding: 30px;
-}
-.form button{
-    background-color: green;
-    border: none;
-    border-radius: 10px;
-    transition: 0.5s;
-    height: 30px;
-    width: 100px;
-}
-.form button:focus{
-    box-shadow: 0px 0px 8px 5px rgba(0, 0, 0, 0.2);
-}
-.form > .content{
-    background-color: #f9f9f9;
-    height: 700px;
-    width: 400px;
-    box-shadow: 0px 0px 30px 4px rgba(0, 0, 0, 0.4);
-    border-radius: 15px;
-    padding: 50px;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     height: 100%;
+    padding: 40px 0px;
+    background-image: url("IMG_0929.JPG");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-.form > .content > .formdata{
+.container > .content{
     display: grid;
-    grid-template-columns: 1fr;
     text-align: center;
-    width: 350px;
+    grid-template-columns: 1fr;
+    width: 75%;
 }
-.form > .content > .formdata > .data{
-    width: 100%;
-    display: grid;
-}
-.form > .content > .formdata > .data input[type="text"]{
-    background-color: #d4d4d4;
-    height: 35px;
-    border: none;
-    border-radius: 5px;
-    transition: 0.5s;
-}
-.form > .content > .formdata > .data input[type="text"]:focus{
-    border: transparent;
-    box-shadow: 0px 0px 7px 5px  rgba(0, 0, 0, 0.2);
-}
-.form > .content > .formdata > .data input[type="text"]:focus-visible{
-    outline: none;
-}
-.form > .content > .formdata > .data > .subject-container{
-    width: 100%;
-    display: grid;
-    text-align: start;
-    grid-gap: 15px;
-}
-.form > .content > .formdata > .data > .gender-container{
-    width: 100%;
-    display: grid;
-    text-align: start;
-    grid-gap: 15px;
-}
-.form > .content > .formdata > .data > .subject-container > .subjects {
+/* Styling The Input Container */
+.container > .content > .input-container{
     display: flex;
-    width: 150px;
-    justify-content: space-between;
-}
-.form > .content > .formdata > .data > .gender-container > .gender {
-    display: flex;
-    width: 150px;
-    justify-content: space-between;
-}
-.form > .content > .formdata > .button{
-    display: flex;
-    padding-top: 20px;
-}
-.form > .content > .formdata button{
-    background-color: green;
-    border: none;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+    padding: 20px;
     border-radius: 10px;
-    transition: 0.5s;
-    height: 30px;
-    width: 100px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: -10px 20px 10px rgba(255, 255, 255, 0.2);
+    margin-bottom: 30px;
 }
-.form > .content > .formdata button:focus{
-    box-shadow: 0px 0px 8px 5px rgba(0, 0, 0, 0.2);
+.container > .content > .input-container input{
+    outline: 2px solid black;
+    background-color: white;
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 1.5em;
+}
+.container > .content > .input-container button{
+    background-color: black;
+    color: white;
+    height: 45px;
+    width: 80px;
+    border-radius: 20px;
+    margin-left: 20px;
+    padding: 0px 10px;
+    transition: 1s;
+}
+.container > .content > .input-container button:hover{
+    border: 1px solid white;
+    cursor: pointer;
+} 
+/* Styling The Output Container */
+.container > .content > .output-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 85%;
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    box-shadow: -10px 20px 10px rgba(255, 255, 255, 0.2);
+}
+.container > .content > .output-container > .head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+}
+.container > .content > .output-container > .head > .right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+.container > .content > .output-container > .head > .right h1{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 90%;
+    margin: 5px 0px;
+}
+.container > .content > .output-container > .head > .right ol{
+    text-align: left;
+    width: 90%;
+    margin: 5px 0px;
+    font-size: 1.3em;
+    height: 150px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.container > .content > .output-container > .head > .right ol::-webkit-scrollbar{
+    width: 10px;
+    border-radius: 20px;
+}
+.container > .content > .output-container > .head > .right ol::-webkit-scrollbar-track{
+    background: black;
+    border-radius: 20px;
+}
+.container > .content > .output-container > .head > .right ol::-webkit-scrollbar-thumb{
+    background: none;
+    border-radius: 20px;
+}
+.container > .content > .output-container > .head > .right ol::-webkit-scrollbar-thumb:hover{
+    background: white;
+}
+.container > .content > .output-container p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.6em;
 }
