--- a/style.css
+++ b/style.css
@@ -134,3 +134,18 @@ body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.6em;
 }
+@media (max-width: 615px){
+    .container > .content > .input-container{
+        width: 55%;
+    }
+    .container > .content > .input-container input{
+        width: 100px;
+    }
+    .container > .content > .output-container > .head{
+        flex-direction: column;
+    }
+    .container > .content > .output-container > .head img{
+        width: 200px;
+        height: 100px;
+    }
+}
