--- a/style/style.css
+++ b/style/style.css
@@ -145,6 +145,7 @@ body{
         width: 150px;
         font-size: 0.9em;
         height: 20px;
+        outline: none;
     }
     .container > .content > .output-container > .head{
         flex-direction: column;
