--- a/style/style.css
+++ b/style/style.css
@@ -1,160 +1,187 @@
-body{
-    margin: 0px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-::-webkit-scrollbar{
-    width: 10px;
-    border-radius: 20px;
+
+body {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-::-webkit-scrollbar-track{
-    background: black;
-    border-radius: 20px;
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 20px;
 }
-::-webkit-scrollbar-thumb{
-    background: none;
-    border-radius: 20px;
+::-webkit-scrollbar-track {
+  background: black;
+  border-radius: 20px;
 }
-::-webkit-scrollbar-thumb:hover{
-    background: white;
+::-webkit-scrollbar-thumb {
+  background: none;
+  border-radius: 20px;
 }
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    padding: 40px 0px;
-    background-image: url("../images/IMG_0929.JPG");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+::-webkit-scrollbar-thumb:hover {
+  background: white;
 }
-.container > .content{
-    display: grid;
-    text-align: center;
-    grid-template-columns: 1fr;
-    width: 75%;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 40px 0px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../images/IMG_0929.JPG");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container > .content {
+  display: grid;
+  text-align: center;
+  grid-template-columns: 1fr;
+  width: 75%;
 }
 /* Styling The Input Container */
-.container > .content > .input-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 45%;
-    padding: 20px;
-    border-radius: 10px;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.7);
-    box-shadow: -10px 20px 10px rgba(255, 255, 255, 0.2);
-    margin-bottom: 30px;
+.container > .content > .input-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45%;
+  padding: 20px;
+  border-radius: 10px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: -10px 20px 10px rgba(255, 255, 255, 0.2);
+  margin-bottom: 30px;
 }
-.container > .content > .input-container input{
-    outline: 2px solid black;
-    background-color: white;
-    padding: 10px;
-    border-radius: 20px;
-    font-size: 1.5em;
+.container > .content > .input-container input {
+  outline: 2px solid black;
+  background-color: white;
+  padding: 10px;
+  border-radius: 20px;
+  font-size: 1.5em;
 }
-.container > .content > .input-container button{
-    background-color: black;
-    color: white;
-    height: 45px;
-    width: 80px;
-    border-radius: 20px;
-    margin-left: 20px;
-    padding: 0px 10px;
-    transition: 1s;
+.container > .content > .input-container button {
+  background-color: black;
+  color: white;
+  height: 45px;
+  width: 80px;
+  border-radius: 20px;
+  margin-left: 20px;
+  padding: 0px 10px;
+  transition: 1s;
 }
-.container > .content > .input-container button:hover{
-    border: 1px solid white;
-    cursor: pointer;
-} 
+.container > .content > .input-container button:hover {
+  border: 1px solid white;
+  cursor: pointer;
+}
 /* Styling The Output Container */
-.container > .content > .output-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container > .content > .output-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 85%;
+  padding: 20px;
+  border-radius: 10px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: -10px 20px 10px rgba(255, 255, 255, 0.2);
+}
+.container > .content > .output-container > .head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+}
+.container > .content > .output-container > .head > .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+.container > .content > .output-container > .head > .right h1 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 90%;
+  margin: 5px 0px;
+}
+.container > .content > .output-container > .head > .right ol {
+  text-align: left;
+  width: 90%;
+  margin: 5px 0px;
+  font-size: 1.3em;
+  height: 150px;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.container
+  > .content
+  > .output-container
+  > .head
+  > .right
+  ol::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 20px;
+}
+.container
+  > .content
+  > .output-container
+  > .head
+  > .right
+  ol::-webkit-scrollbar-track {
+  background: black;
+  border-radius: 20px;
+}
+.container
+  > .content
+  > .output-container
+  > .head
+  > .right
+  ol::-webkit-scrollbar-thumb {
+  background: none;
+  border-radius: 20px;
+}
+.container
+  > .content
+  > .output-container
+  > .head
+  > .right
+  ol::-webkit-scrollbar-thumb:hover {
+  background: white;
+}
+.container > .content > .output-container p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 1.6em;
+}
+@media (max-width: 615px) {
+  .container > .content {
+    width: 95%;
+  }
+  .container > .content > .input-container {
+    width: 75%;
+  }
+  .container > .content > .input-container input {
+    width: 150px;
+    font-size: 0.9em;
+    height: 20px;
+    outline: none;
+  }
+  .container > .content > .output-container > .head {
     flex-direction: column;
-    width: 85%;
-    padding: 20px;
-    border-radius: 10px;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.7);
-    box-shadow: -10px 20px 10px rgba(255, 255, 255, 0.2);
-}
-.container > .content > .output-container > .head{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-}
-.container > .content > .output-container > .head > .right{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-}
-.container > .content > .output-container > .head > .right h1{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 90%;
-    margin: 5px 0px;
-}
-.container > .content > .output-container > .head > .right ol{
+  }
+  .container > .content > .output-container > .head img {
+    width: 250px;
+    height: 180px;
+  }
+  .container > .content > .output-container p {
     text-align: left;
-    width: 90%;
-    margin: 5px 0px;
-    font-size: 1.3em;
-    height: 150px;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.container > .content > .output-container > .head > .right ol::-webkit-scrollbar{
-    width: 10px;
-    border-radius: 20px;
-}
-.container > .content > .output-container > .head > .right ol::-webkit-scrollbar-track{
-    background: black;
-    border-radius: 20px;
-}
-.container > .content > .output-container > .head > .right ol::-webkit-scrollbar-thumb{
-    background: none;
-    border-radius: 20px;
-}
-.container > .content > .output-container > .head > .right ol::-webkit-scrollbar-thumb:hover{
-    background: white;
-}
-.container > .content > .output-container p{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.6em;
-}
-@media (max-width: 615px){
-    .container > .content{
-        width: 95%;
-    }
-    .container > .content > .input-container{
-        width: 75%;
-    }
-    .container > .content > .input-container input{
-        width: 150px;
-        font-size: 0.9em;
-        height: 20px;
-        outline: none;
-    }
-    .container > .content > .output-container > .head{
-        flex-direction: column;
-    }
-    .container > .content > .output-container > .head img{
-        width: 250px;
-        height: 180px;
-    }
-    .container > .content > .output-container p {
-        text-align: left;
-    }
+  }
 }
