Added some functionality for the API fetching and i also added axios for the API fetching it is very fast and effecient

--- a/style/style.css
+++ b/style/style.css
@@ -34,18 +34,19 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.container > .content {
+
+.content {
   display: grid;
   text-align: center;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
   width: 75%;
 }
-/* Styling The Input Container */
-.container > .content > .input-container {
+
+/* Styling The Input Wripper */
+.input_wripper {
   display: flex;
-  justify-content: center;
   align-items: center;
-  width: 45%;
+  width: 85%;
   padding: 20px;
   border-radius: 10px;
   color: white;
@@ -53,29 +54,41 @@ body {
   box-shadow: -10px 20px 10px rgba(255, 255, 255, 0.2);
   margin-bottom: 30px;
 }
-.container > .content > .input-container input {
-  outline: 2px solid black;
+
+.input {
+  width: 75%;
+  height: 8vh;
+  border: 2px solid transparent;
+  outline: 2px solid transparent;
   background-color: white;
-  padding: 10px;
-  border-radius: 20px;
+  padding-left: 20px;
+  border-radius: 10px;
   font-size: 1.5em;
 }
-.container > .content > .input-container button {
-  background-color: black;
-  color: white;
-  height: 45px;
-  width: 80px;
-  border-radius: 20px;
+
+input:focus {
+  outline: 4px solid #243073;
+}
+
+#generateBtn {
+  background-color: #fff;
+  color: #000;
+  font-size: 1.3rem;
+  padding: 10px 30px;
+  border: 2px solid transparent;
+  border-radius: 10px;
   margin-left: 20px;
-  padding: 0px 10px;
-  transition: 1s;
+  transition: 0.5s ease-in;
 }
-.container > .content > .input-container button:hover {
-  border: 1px solid white;
-  cursor: pointer;
+
+#generateBtn:hover {
+  background: #000;
+  color: #fff;
+  border: 2px solid #fff;
 }
+
 /* Styling The Output Container */
-.container > .content > .output-container {
+.output-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,27 +100,37 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
   box-shadow: -10px 20px 10px rgba(255, 255, 255, 0.2);
 }
-.container > .content > .output-container > .head {
+
+.head {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 30px;
   width: 90%;
 }
-.container > .content > .output-container > .head > .right {
+
+.recipe_img {
+  border-radius: 10px;
+  padding-bottom: 1.2rem;
+}
+
+.ingredents_wripper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 100%;
 }
-.container > .content > .output-container > .head > .right h1 {
+
+.ingredents_wripper h1 {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   width: 90%;
   margin: 5px 0px;
 }
-.container > .content > .output-container > .head > .right ol {
+
+.ingredents_wripper ol {
   text-align: left;
   width: 90%;
   margin: 5px 0px;
@@ -118,42 +141,31 @@ body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-.container
-  > .content
-  > .output-container
-  > .head
-  > .right
-  ol::-webkit-scrollbar {
+
+.ingredents_wripper ol::-webkit-scrollbar {
   width: 10px;
   border-radius: 20px;
 }
-.container
-  > .content
-  > .output-container
-  > .head
-  > .right
-  ol::-webkit-scrollbar-track {
+
+.ingredents_wripper ol::-webkit-scrollbar-track {
   background: black;
   border-radius: 20px;
 }
-.container
-  > .content
-  > .output-container
-  > .head
-  > .right
-  ol::-webkit-scrollbar-thumb {
+
+.ingredents_wripper ol::-webkit-scrollbar-thumb {
   background: none;
   border-radius: 20px;
 }
-.container
-  > .content
-  > .output-container
-  > .head
-  > .right
-  ol::-webkit-scrollbar-thumb:hover {
+
+.ingredents_wripper ol::-webkit-scrollbar-thumb:hover {
   background: white;
 }
-.container > .content > .output-container p {
+
+.recipe_text {
+  padding-top: 3rem;
+}
+
+.output-container p {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -161,27 +173,37 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 1.6em;
 }
+
 @media (max-width: 615px) {
-  .container > .content {
+  .output-container {
+    width: 98%;
+    margin-top: 10px;
+  }
+  .content {
     width: 95%;
   }
-  .container > .content > .input-container {
-    width: 75%;
+  .input_wripper {
+    width: 98%;
   }
-  .container > .content > .input-container input {
-    width: 150px;
-    font-size: 0.9em;
-    height: 20px;
-    outline: none;
+  .input {
+    width: 85%;
   }
-  .container > .content > .output-container > .head {
+
+  #generateBtn {
+    padding: 4px 10px;
+    font-size: 1.1rem;
+  }
+  .recipe_text {
+    padding-top: 2.5rem;
+  }
+  .head {
     flex-direction: column;
   }
-  .container > .content > .output-container > .head img {
+  .head img {
     width: 250px;
     height: 180px;
   }
-  .container > .content > .output-container p {
+  .output-container p {
     text-align: left;
   }
 }
