Use gir fetch instead of axios because it was not working well in production mode

--- a/style/style.css
+++ b/style/style.css
@@ -206,4 +206,9 @@ input:focus {
   .output-container p {
     text-align: left;
   }
+
+  .recipeName,
+  .recipeCategory {
+    text-align: center;
+  }
 }
